@@ -1,13 +1,18 @@
 package com.project.ReCCM.service.custom;
 
 import com.project.ReCCM.Repository.custom.CommentResponseDto;
+import com.project.ReCCM.Repository.custom.CustomResponseDto;
 import com.project.ReCCM.domain.custom.Comment;
 import com.project.ReCCM.domain.custom.CommentRepository;
 import com.project.ReCCM.domain.custom.Custom;
 import com.project.ReCCM.domain.custom.CustomRepository;
+import com.project.ReCCM.domain.member.Member;
+import com.project.ReCCM.domain.member.MemberRepository;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CommentService {
@@ -15,17 +20,24 @@ public class CommentService {
     private final CommentRepository commentRepository;
     private final CustomRepository customRepository;
 
-    public CommentService(CommentRepository commentRepository, CustomRepository customRepository) {
+    private final MemberRepository memberRepository;
+
+    public CommentService(CommentRepository commentRepository, CustomRepository customRepository, MemberRepository memberRepository) {
         this.commentRepository = commentRepository;
         this.customRepository = customRepository;
+        this.memberRepository = memberRepository;
     }
 
     // 댓글 생성 로직
-    public CommentResponseDto createComment(Long postId, String text) {
+    public CommentResponseDto createComment(Long memberPK, Long postId, String text) {
         Custom custom = customRepository.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("해당 게시글이 존재하지 않습니다."));
+        
+        Member member = memberRepository.findById(memberPK)
+                .orElseThrow(() -> new IllegalArgumentException("해당 멤버가 존재하지 않습니다."));
 
         Comment comment = new Comment();
+        comment.setMember(member);
         comment.setText(text);
         comment.setCustom(custom); // 댓글을 게시글과 연결
 
@@ -36,8 +48,16 @@ public class CommentService {
     // 특정 게시물의 댓글 리스트 조회
     public List<CommentResponseDto> getCommentsByPostId(Long postId) {
         List<Comment> comments = commentRepository.findByCustomId(postId);
-        return comments.stream()
-                .map(CommentResponseDto::new) // Comment 엔티티를 DTO로 변환
-                .toList();
+
+        List<CommentResponseDto> response = comments.stream()
+                .map(comment -> new CommentResponseDto(
+                        comment.getId(),
+                        comment.getText(),
+                        comment.getMember().getMemberId()
+                        ))
+                .collect(Collectors.toList());
+
+        return response;
+
     }
 }
